---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k : int type _ : string(k)"
---
"k"@(FileId(1), 4..5) [ConstVar(Var, No)]: int
"_"@(FileId(1), 17..18) [Type]: alias[DefId(PackageId(0), LocalDefId(1))] of string_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 28..29: cannot compute `k` at compile-time
| error in file FileId(1) for 28..29: `k` is a reference to a variable, not a constant
| note in file FileId(1) for 4..5: `k` declared here
